--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
         "php": ">=8.2",
         "ext-bcmath": "*",
         "ext-json": "*",
+        "ext-pdo_mysql": "*",
         "ext-sockets": "*",
         "doctrine/collections": "^2.1",
         "doctrine/dbal": "^3.8",
         "illuminate/console": "^11.29",
         "illuminate/contracts": "^10.0||^11.0",
         "illuminate/support": "^11.29",
+        "mobilestock/laravel-model-affected-rows-verification": "^0.0.6",
         "psr/log": "^3.0",
         "psr/simple-cache": "^3.0",
         "symfony/dependency-injection": "^7.0",
