--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,11 +1,7 @@
 FROM php:8.3.13
 
-ENV TZ=America/Sao_Paulo \
-    DEBIAN_FRONTEND=noninteractive
+ENV TZ=America/Sao_Paulo
 ENV PHP_IDE_CONFIG="serverName=local"
-
-# One of tests need to allocate 128M of memory
-RUN echo "memory_limit=256M" > /usr/local/etc/php/conf.d/memory-limit.ini
 
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends \
