--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,35 +1,30 @@
-FROM php:8.3.13
+FROM php:8.3
 
 ENV TZ=America/Sao_Paulo
 ENV PHP_IDE_CONFIG="serverName=local"
 
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends \
-      tzdata  \
-      libzip-dev \
-      libxml2-dev \
-      libcurl4-openssl-dev \
-      libonig-dev \
-      libssl-dev \
+      tzdata \
       pkg-config \
       unzip \
-      curl \
       default-mysql-server \
-      netcat-traditional
+      netcat-openbsd
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-RUN docker-php-ext-install mysqli
-RUN docker-php-ext-install pdo_mysql
+RUN apt-get install -y --no-install-recommends libonig-dev
 RUN docker-php-ext-install mbstring
-RUN docker-php-ext-install xml
+
+RUN apt-get install -y --no-install-recommends libzip-dev
 RUN docker-php-ext-install zip
+
+RUN docker-php-ext-install mysqli pdo_mysql
 RUN docker-php-ext-install bcmath
-RUN docker-php-ext-install curl
 RUN docker-php-ext-install sockets
 
-RUN pecl install xdebug && \
-    docker-php-ext-enable xdebug
+RUN pecl install xdebug
+RUN docker-php-ext-enable xdebug   
 
 RUN usermod -d /var/lib/mysql mysql
 
