--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\MySQLReplication\\": "Tests/MySQLReplication",
-            "Tests\\Replicator\\": "Tests/Replicator"
+            "Tests\\MySQLReplication\\": "tests/MySQLReplication",
+            "Tests\\Replicator\\": "tests/Replicator"
         }
       },
     "config": {
